2000-12-15  Mark Galassi  <rosalia@galassi.org>

	* siman.c (gsl_siman_solve): reversed a small change I had made
	earlier and went back to taking Boltzmann-conditional steps when
	the new energy is equal to the previous one.  This allows you to
	move around if you are stuck on a plateau.

	* gsl_siman.h, siman.c, siman_test.c, siman_tsp.c, test.c: changed
	the siman_solve API to allow for more general search spaces.  The
	problem was that we assumed that points in the search space were
	data structures that were allocated in continguous memory, so they
	could not be linked structures.  I replaced the malloc(), memcpy()
	and free() calls with copy_constructor(), copyfunc() and
	copy_destructor() functions.  The user passes these functions,
	which means that siman_solve() now takes three more arguments of
	type gsl_siman_copy_t, gsl_siman_copy_construct_t and
	gsl_siman_destroy_t.  If these arguments are NULL (and all three
	of them have to be NULL together), the traditional memcpy()
	approach is used.

1999-02-14  Mark Galassi  <rosalia@cygnus.com>

	* minor fixes.

Tue Nov 17 17:22:14 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added #include <config.h> to all top-level source files

Sun Nov  8 20:40:28 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* siman_tsp.c: clean up for make strict

1998-11-06    <bjg@ancho.lanl.gov>

	* test.c: added prototype for memcpy using #include <string.h>

	* siman_test.c: added prototype for memcpy using #include <string.h>

Wed Oct 28 15:06:58 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* siman.c: added #include <string.h> for memcpy

Thu Aug 20 12:22:28 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* siman.c: use (char *) judiciously to avoid warnings about void
 	pointer arithmetic (see randist/shuffle.c for similar examples)

	* siman_test.c: perform several tests, using the exact answer as
 	the comparison value, rather than checking for stationarity.

Sun Jun 28 14:11:04 1998  Brian Gough  <bjg@vvv.lanl.gov>
